--- a/src/assets/css/components/Select.scss
+++ b/src/assets/css/components/Select.scss
@@ -24,6 +24,16 @@
     }
   }
 
+  &.with-arrow {
+    .input-group-append {
+      position: absolute;
+      height: 100%;
+      right: 0;
+      pointer-events: none;
+      background: #ffffff;
+    }
+  }
+
   &-wrapper {
     flex: 1;
 
