--- a/src/chinh-sua-ban-thao.pug
+++ b/src/chinh-sua-ban-thao.pug
@@ -9,7 +9,7 @@ block pages
       .row 
         .col-lg-9.pr-lg-2
           +Card({})
-            .PreviewPage-submit.d-flex.flex-wrap.mb-3.border-bottom(style="margin-top: -15px;")
+            .PreviewPage-submit.d-flex.flex-wrap.mb-3.border(style="margin-top: -16px; margin-left: -16px; margin-right: -16px;")
               +Button({ title: 'Gửi', icon: 'tio-send-outlined mr-1', variant: 'btn-primary' })  
               +Button({ title: 'Xem danh sách lịch sử', icon: 'tio-invisible mr-1', variant: 'btn-soft-dark' })  
 
