--- a/src/includes/components/Card.pug
+++ b/src/includes/components/Card.pug
@@ -1,4 +1,4 @@
-mixin Card({ className = '', style, id = '', block, title, size = 'middle', noPadding, dark, orange, fullHeight, iconHeader, accordionId, accordionParentId, suffixText, sortable, editable })
+mixin Card({ className = '', style, id = '', block, title, size = 'middle', noPadding, dark, orange, fullHeight, iconHeader, accordionId, accordionParentId, showDate, sortable, editable })
   .Card.card(id=`${id}` class=`card-${size} ${dark ? 'dark' : ''} ${orange ? 'orange' : ''} ${className} ${fullHeight ? 'full-height' : ''}` style=style || false) 
     if (title)
       .card-header.d-flex.align-items-center.justify-content-between
@@ -16,12 +16,14 @@ mixin Card({ className = '', style, id = '', block, title, size = 'middle', noPa
           .Card-sortable-arrow.js-arrange-remove
             <i class="tio-clear"></i>
 
-        if (accordionId)
-          .Card-collapse-arrow.ml-auto(role="button" data-toggle="collapse" data-target=`#${accordionId}` aria-expanded="true" aria-controls=`${accordionId}`)
-            <i class="tio-chevron-down"></i>
+        if (showDate)
+          .Card-suffix-text.ml-auto.mr-2
+            i.tio-date-range.mr-1
+            |T3 - 30/06/2021
 
-        if (suffixText)
-          .Card-suffix-text.ml-2= suffixText
+        if (accordionId)
+          .Card-collapse-arrow(role="button" data-toggle="collapse" data-target=`#${accordionId}` aria-expanded="true" aria-controls=`${accordionId}` class=`${showDate ? '' : 'ml-auto'}`)
+            <i class="tio-chevron-down"></i>
 
         if (editable)
           +Button({ className: 'Card-editable-btn ml-auto', title: 'Thêm Field mặc định', variant: 'btn-white' })
