--- a/src/quan-ly-xbp-them-tai-ban.pug
+++ b/src/quan-ly-xbp-them-tai-ban.pug
@@ -9,13 +9,13 @@ block pages
       .row 
         .col-lg-9.pr-lg-2
           +Card({ noPadding: true })
-            .FormPage-submit.d-flex.flex-wrap.mb-3.border-bottom
+            .FormPage-submit.d-flex.flex-wrap.mb-3.border
               +Button({ title: 'Gửi đăng ký ', icon: 'tio-send-outlined mr-1', variant: 'btn-primary' })  
               +Button({ title: 'Lưu nháp', icon: 'tio-save-outlined mr-1', variant: 'btn-soft-dark' })  
               +Button({ title: 'Huỷ', icon: 'tio-clear mr-1', variant: 'btn-soft-dark' })  
 
             .accordion
-              +Accordion({ className: 'FormPage-margin', mainId: 'thongtinkhaibao', id: 'Accordion1', parentId: 'AccordionParent', title: 'Thông tin xuất bản' })
+              +Accordion({ className: '', mainId: 'thongtinkhaibao', id: 'Accordion1', parentId: 'AccordionParent', title: 'Thông tin xuất bản' })
                 form(action="#") 
                   h4.mb-3 Tái bản: Vật liệu và cấu tạo hoàn thiện nội thất
 
@@ -45,6 +45,7 @@ block pages
                               { label: 'Phương thức xuất bản 3', value: '3' },
                             ],
                             iconSuffix: 'tio-chevron-down',
+                            withArrow: true,
                           })
                         .col-md-6.col-sm-12.mb-3
                           .d-flex.align-items-end
@@ -84,6 +85,7 @@ block pages
                               { label: 'Kiểu HĐ 3', value: '3' },
                             ],
                             iconSuffix: 'tio-chevron-down',
+                            withArrow: true,
                           })
                         .col-lg-3.col-md-6.col-sm-12.mb-3
                           +DatePicker({ label: 'Ngày ký HĐ', placeholder: 'Ngày ký HĐ', iconSuffix: 'tio-date-range' })
@@ -104,6 +106,7 @@ block pages
                                 { label: 'Chủ đề 3', value: '3' },
                               ],
                               iconSuffix: 'tio-chevron-down',
+                              withArrow: true,
                               required: true,
                             })
                             +Button({ className: 'border ml-3', icon: 'tio-add', variant: 'btn-light', circle: true })
@@ -120,6 +123,7 @@ block pages
                                 { label: 'Nhóm đối tượng 3', value: '3' },
                               ],
                               iconSuffix: 'tio-chevron-down',
+                              withArrow: true,
                               required: true,
                             })
                             +Button({ className: 'border ml-3', icon: 'tio-add', variant: 'btn-light', circle: true })
@@ -136,6 +140,7 @@ block pages
                                 { label: 'Nhóm độ tuổi 3', value: '3' },
                               ],
                               iconSuffix: 'tio-chevron-down',
+                              withArrow: true,
                               required: true,
                             })
                             +Button({ className: 'border ml-3', icon: 'tio-add', variant: 'btn-light', circle: true })
@@ -152,6 +157,7 @@ block pages
                                 { label: 'Trình độ 3', value: '3' },
                               ],
                               iconSuffix: 'tio-chevron-down',
+                              withArrow: true,
                               required: true,
                             })
                             +Button({ className: 'border ml-3', icon: 'tio-add', variant: 'btn-light', circle: true })
@@ -168,6 +174,7 @@ block pages
                                 { label: 'Lĩnh vực - Ngành 3', value: '3' },
                               ],
                               iconSuffix: 'tio-chevron-down',
+                              withArrow: true,
                               required: true,
                             })
                             +Button({ className: 'border ml-3', icon: 'tio-add', variant: 'btn-light', circle: true })
@@ -210,6 +217,7 @@ block pages
                               { label: 'Chuẩn phát hành 3', value: '3' },
                             ],
                             iconSuffix: 'tio-chevron-down',
+                            withArrow: true,
                             required: true,
                           })
 
@@ -225,6 +233,7 @@ block pages
                                 { label: 'Phát hành tại 3', value: '3' },
                               ],
                               iconSuffix: 'tio-chevron-down',
+                              withArrow: true,
                               required: true,
                             })
                             +Button({ className: 'border ml-3', icon: 'tio-add', variant: 'btn-light', circle: true })
@@ -272,6 +281,7 @@ block pages
                                 { label: 'Tên dịch giả 3', value: '3' },
                               ],
                               iconSuffix: 'tio-chevron-down',
+                              withArrow: true,
                             })
                             +Button({ className: 'border ml-3', icon: 'tio-add', variant: 'btn-light', circle: true })
 
@@ -302,6 +312,7 @@ block pages
                               { label: 'Ngôn ngữ xuất bản 3', value: '3' },
                             ],
                             iconSuffix: 'tio-chevron-down',
+                            withArrow: true,
                             required: true,
                           })
 
@@ -315,6 +326,7 @@ block pages
                               { label: 'Ngôn ngữ gốc 3', value: '3' },
                             ],
                             iconSuffix: 'tio-chevron-down',
+                            withArrow: true,
                             required: true,
                           })
                         
@@ -332,6 +344,7 @@ block pages
                               { label: 'Loại bản quyền 3', value: '3' },
                             ],
                             iconSuffix: 'tio-chevron-down',
+                            withArrow: true,
                           })
                         .col-md-4.col-sm-12.mb-3
                           +Input({ label: 'Bản quyền thuộc', placeholder: 'Nhập tên chủ sở hữu bản quyền' })
@@ -342,7 +355,7 @@ block pages
                         .col-12.mb-3
                           +TextArea({ label: 'Thông tin bổ sung', placeholder: 'Nhập nội dung tại đây' })
 
-              +Accordion({ className: 'FormPage-margin bottom', mainId: 'cacthongtinkhac', id: 'Accordion2', parentId: 'AccordionParent', title: 'Các thông tin khác' })
+              +Accordion({ className: ' bottom', mainId: 'cacthongtinkhac', id: 'Accordion2', parentId: 'AccordionParent', title: 'Các thông tin khác' })
                 form(action="#") 
                   .row
                     .col-12.mb-3
