--- a/src/xem-truoc-nguoi-duyet-bieu-so.pug
+++ b/src/xem-truoc-nguoi-duyet-bieu-so.pug
@@ -24,14 +24,14 @@ block pages
       .row 
         .col-lg-9.pr-lg-2
           +Card({ id: 'bieuso', noPadding: true })
-            .PreviewPage-submit.d-flex.flex-wrap.mb-3.border-bottom
+            .PreviewPage-submit.d-flex.flex-wrap.mb-3.border
               +Button({ title: 'Duyệt', icon: 'tio-checkmark-square-outlined mr-1', variant: 'btn-primary' })  
               +Button({ title: 'Từ chối', icon: 'tio-clear mr-1', variant: 'btn-soft-dark' })  
               +Button({ title: 'Comment', icon: 'tio-sms-chat-outlined mr-1', variant: 'btn-soft-dark' })  
               +Button({ title: 'In biểu', icon: 'tio-print mr-1', variant: 'btn-soft-dark' })  
 
             .accordion
-              +Accordion({ className: 'PreviewPage-margin', mainId: 'thongtinchung', id: 'Accordion1', parentId: 'AccordionParent', title: 'Thông tin chung' })
+              +Accordion({ className: '', mainId: 'thongtinchung', id: 'Accordion1', parentId: 'AccordionParent', title: 'Thông tin chung' })
                 .row 
                   .col-md-6.pr-md-2.mb-3
                     +Table({})
@@ -247,7 +247,7 @@ block pages
                               td.text-nowrap #[strong Ngày hết hạn]
                               td.w-100 27/09/2022
 
-              +Accordion({ className: 'PreviewPage-margin', mainId: 'banthaofile', id: 'Accordion2', parentId: 'AccordionParent', title: 'Bản thảo & FILE' })
+              +Accordion({ className: '', mainId: 'banthaofile', id: 'Accordion2', parentId: 'AccordionParent', title: 'Bản thảo & FILE' })
                 form(action="#") 
                   +Tab({
                     className: 'mb-3',
@@ -286,7 +286,7 @@ block pages
                                   .Table-link.ellipsis Thế giới bên trong bất động sản: Mua, bán và tạo lợi nhuận trong thị trường bất động sản.
                                 td.text-nowrap 23:13’ 27/06/2022
 
-              +Accordion({ className: 'PreviewPage-margin', mainId: 'lichsuthaotac', id: 'Accordion3', parentId: 'AccordionParent', title: 'Lịch sử thao tác', suffixText: 'T3 - 30/06/2021', noPadding: true })
+              +Accordion({ className: '', mainId: 'lichsuthaotac', id: 'Accordion3', parentId: 'AccordionParent', title: 'Lịch sử thao tác', showDate: true, noPadding: true })
                 +Table({ style: 'margin: -1px', showPagination: true })
                   tbody 
                     each item in [1,2,3,4,5]
@@ -294,7 +294,7 @@ block pages
                         td.text-center= item
                         td Nguyễn Đình Toàn đã sửa tên Xuất bản phẩm 23:13’ 27/06/2022
 
-              +Accordion({ className: 'PreviewPage-margin', mainId: 'binhluanvaduyet', id: 'Accordion4', parentId: 'AccordionParent', title: 'Bình luận và duyệt', suffixText: 'T3 - 30/06/2021', noPadding: true })
+              +Accordion({ className: '', mainId: 'binhluanvaduyet', id: 'Accordion4', parentId: 'AccordionParent', title: 'Bình luận và duyệt', showDate: true, noPadding: true })
                 +Table({ style: 'margin: -1px', showPagination: true })
                   thead 
                     tr 
@@ -302,7 +302,7 @@ block pages
                       th Công đoạn
                       th Người bình luận
                       th Nội dung bình luận
-                      th Trạng thái
+                      th.text-center Trạng thái
                       th Thời gian
                   tbody 
                     each item in [1,2,3,4,5]
@@ -316,7 +316,7 @@ block pages
                             +Button({ title: item % 2 === 0 ? 'Đã duyệt' : 'Trả lại', variant: item % 2 === 0 ? 'btn-primary' : 'btn-soft-dark', badge: true })
                         td 23:13 30/09/22
 
-              +Accordion({ className: 'PreviewPage-margin bottom', mainId: 'nhanxet', id: 'Accordion5', parentId: 'AccordionParent', title: 'Nhận xét' })
+              +Accordion({ className: ' bottom', mainId: 'nhanxet', id: 'Accordion5', parentId: 'AccordionParent', title: 'Nhận xét' })
                 .row 
                   .col-12 
                     +TextArea({ label: 'GHI CHÚ', placeholder: 'Nhập nội dung tại đây' })
