--- a/src/includes/components/FieldEditable.pug
+++ b/src/includes/components/FieldEditable.pug
@@ -20,7 +20,7 @@ mixin FieldEditable({ title, attribute, id, header, accordionId = '', accordionP
               +Button({ className: 'js-arrange-remove', icon: 'tio-clear', variant: 'btn-white' })
 
             .FieldEditable-header-item-collapse.d-flex.align-items-center.ml-2
-              +Button({ icon: 'tio-remove', variant: 'btn-ghost-white' })
+              //- +Button({ icon: 'tio-remove', variant: 'btn-ghost-white' })
               div(role="button" data-toggle="collapse" data-target=`#${accordionId}` aria-expanded="true" aria-controls=`${accordionId}`)
                 +Button({ icon: 'tio-edit', variant: 'btn-ghost-white' })
 
@@ -44,6 +44,7 @@ mixin FieldEditable({ title, attribute, id, header, accordionId = '', accordionP
                         { label: 'Tên thuộc tính 3', value: '3' },
                       ],
                       iconSuffix: 'tio-chevron-down',
+                      withArrow: true,
                     })
                     +Button({ className: 'ml-3', variant: 'btn-primary', title: 'Thêm' })
 
@@ -61,6 +62,7 @@ mixin FieldEditable({ title, attribute, id, header, accordionId = '', accordionP
                       { label: 'Kiểu Field tùy chỉnh 3', value: '3' },
                     ],
                     iconSuffix: 'tio-chevron-down',
+                    withArrow: true,
                   })
                 .col-6.mb-3
                   +Input({ label: 'Text Gợi ý', placeholder: 'Nhập text Gợi ý', value: 'Mã XBP' })
@@ -74,6 +76,7 @@ mixin FieldEditable({ title, attribute, id, header, accordionId = '', accordionP
                       { label: 'Người điền 3', value: '3' },
                     ],
                     iconSuffix: 'tio-chevron-down',
+                    withArrow: true,
                   })
                 .col-6.mb-3
                   +Checkbox({
