--- a/src/includes/components/JobCard.pug
+++ b/src/includes/components/JobCard.pug
@@ -1,12 +1,15 @@
-mixin JobCard({ dark })
+mixin JobCard({ order, dark })
   .JobCard.d-flex.align-items-start(class=`${dark ? 'dark' : ''}`)
-    .JobCard-avatar 
-      +Avatar({ text: 'P', size: 'avatar-xs' })
+    if (order)
+      .JobCard-order
+        span= order
+    else
+      .JobCard-avatar 
+        +Avatar({ text: 'P', size: 'avatar-xs' })
     .JobCard-info 
       .JobCard-info-header.d-flex.align-items-center 
         .JobCard-info-header-title Phê duyệt XBP: Thế giới bên trong bất động sản: Mua, bán và tạo lợi nhuận trong thị trường bất động sản.
         .JobCard-info-header-status.d-flex 
-          +Button({ title: 'Hủy', variant: 'btn-soft-danger' })
           +Button({ title: 'Chậm', variant: 'btn-soft-warning' })
 
       .JobCard-info-body
@@ -15,20 +18,23 @@ mixin JobCard({ dark })
             .JobCard-info-body-text.d-flex.align-items-start 
               <i class="tio-user"></i>
               span Giao: TBBT Lê Văn Hân
-          .col-md-6.col-sm-12
-            .JobCard-info-body-text.d-flex.align-items-start 
-              <i class="tio-user"></i>
-              span Nhận: BTV Vũ Hoài Nam
+          if (!order)
+            .col-md-6.col-sm-12
+              .JobCard-info-body-text.d-flex.align-items-start 
+                <i class="tio-user"></i>
+                span Nhận: BTV Vũ Hoài Nam
           .col-md-6.col-sm-12
             .JobCard-info-body-text.d-flex.align-items-start 
               <i class="tio-time"></i>
               span Bắt đầu:  31/09/22
-          .col-md-6.col-sm-12
-            .JobCard-info-body-text.d-flex.align-items-start 
-              <i class="tio-time-40-s"></i>
-              span Deadline: 31/09/22
+          if (!order)
+            .col-md-6.col-sm-12
+              .JobCard-info-body-text.d-flex.align-items-start 
+                <i class="tio-time-40-s"></i>
+                span Deadline: 31/09/22
 
         .JobCard-info-actions.d-flex 
-          +Button({ title: 'Duyệt', variant: 'btn-primary' })
+          +Button({ title: 'Gửi', variant: 'btn-primary' })
+          +Button({ title: 'Phê duyệt', variant: 'btn-success' })
           +Button({ title: 'Từ chối', variant: 'btn-soft-dark' })
     
