--- a/src/includes/layouts/Guest.pug
+++ b/src/includes/layouts/Guest.pug
@@ -35,9 +35,9 @@ html
 		//- Favicon
 		link(rel="icon" type="image/png" href="./assets/images/logo.svg")
 
-		link(rel="preconnect" href="https://fonts.googleapis.com")
-		link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-		link(href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet")
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
 		//- CSS Implementing Plugins
 		//- <link rel="stylesheet" href="./assets/vendor/bootstrap-icons/font/bootstrap-icons.css">
